src/common.blocks/header.scss
.header {
  width: 100%;
  height: 70px;
  position: fixed;
  top: 0;
  left: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 7%;
  background-color: #ffffff;
  border-bottom: 1px solid rgba(64, 64, 64, 0.15);
  z-index: 1;
}

.header-links {
  flex-grow: 0;
  & > a{
    color: #7c7c7c;
    margin-left: 16px;
    text-decoration: none;
    font-size: 1.1em;
  }
}

.header-menu-mobile {
  display: none;
}

.header-avatar {
  position: relative;

  &__image-wrapper {
    width: 40px;
    height: 40px;
  }
  &__image {
    cursor: pointer;
    width: inherit;
    height: inherit;
    border: 1px solid #cacaca;
    border-radius: 100%;
    background-position: center;
    background-size: cover;
    z-index: 2;
    position: absolute;
    right: 0;
    top: 0;
  }
}

.header-links-list {
  display: flex;
  align-items: center;

  &__item {
    cursor: pointer;
    
    > a {
      font-family: 'Raleway', sans-serif;
      font-size: 0.85em;
      color: #6e6e6e;
      border-bottom: 2px solid #fff;
      position: relative;
      top: 1px;
    }

    > a:hover {
      color: #444;
    }
    
  }

  &__item-exit {
    margin-right: 0!important;
    > a {
      padding: 9px 14px;
      background-color: #6669fb;
      color: white;
      border-radius: 6px;
      border-bottom: none;
      top: 0;
    }

    > a:hover {
      color: #fff;
      border-bottom: #fff;
    }
  }

  &__item-save {
    @extend .header-links-list__item-exit;
    display: none;
  }

  &__item-margin {
    margin-left: 51px;
  }

  &__item_selected {
    > a {
      color: #444;
    }
  }

  &__item:not(:last-child) {
    margin-right: 32px;
  }
}

.header-logo {
  color:#6669FB;
  font-family: 'Quicksand', 'Montserrat', sans-serif;
  font-size: 2em;
  margin: 0;
  display: flex;
  align-items: center;

  &__tag {
    color: #757575;
    font-family: 'Roboto', sans-serif;
    font-size: 0.5em;
    margin-left: 10px;
    position: relative;
    top: 1px;
    > span {
      font-weight: bold;
    }
  }

  &__dot {
    margin-right: 3px;
    position: relative;
    top: 1px;
  }
}


// Media styles
@media (max-width: 940px) {
  .header-links-list__item-margin {
    margin-left: 13px;
  }
}

@media (max-width: 820px) {
  .header-register {
    display: none;
  }
}

@media (max-width: 620px) {
  .header-logo {
    font-size: 1.7em;
  }
}

@media (max-width: 595px) {
  .header-links-list__item:not(:last-child) {
    margin-right: 17px;
  }

  .header-links-list__item > a {
    font-size: 0.75em;
  }
  
}

@media (max-width: 540px) {
  .header {
    padding: 0 6%;
    height: 60px;
  }
  .header-avatar__image-wrapper {
    width: 35px;
    height: 35px;
  }
}

@media (max-width: 495px) {
  .mobile-hidden {
    display: none;
  }

  .header-links-list__item-save {
    display: flex;
  }
}

